--- a/Demo-iOS/Podfile
+++ b/Demo-iOS/Podfile
@@ -1,9 +1,9 @@
 target 'iOS-Demo' do
-platform :ios,5.0
+platform :ios, 11.0
 pod 'LKDBHelper', :path => '../'
 end
 
 target 'Watch WatchKit Extension' do
-platform :watchos, '2.0'
+platform :watchos, 7.0
 pod 'LKDBHelper', :path => '../'
 end
